# STM32_tasks

./: .gitmodules  README.md
.github/workflows/: ci_cd.yml  ci_cd.yml.save
STM32_AzureRTOS_Project/: .clang-format  CMakeLists.txt  just_try2.patch  project.yml
STM32_AzureRTOS_Project/cmake/: FindThreadX.cmake
STM32_AzureRTOS_Project/cmake/stm32/: f4.cmake  linker_ld.cmake
STM32_AzureRTOS_Project/examples/F446_blink/: CMakeLists.txt
STM32_AzureRTOS_Project/examples/F446_blink/inc/: main.h  stm32f4xx_it.h
STM32_AzureRTOS_Project/examples/F446_blink/src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32_AzureRTOS_Project/examples/MyGPIO_test/: CMakeLists.txt
STM32_AzureRTOS_Project/examples/MyGPIO_test/inc/: stm32g0xx_hal_conf.h
STM32_AzureRTOS_Project/examples/MyGPIO_test/src/: main.c  syscalls.c  sysmem.c
STM32_AzureRTOS_Project/examples/blink_Cube_IDE/: CMakeLists.txt
STM32_AzureRTOS_Project/examples/blink_Cube_IDE/inc/: main.h
STM32_AzureRTOS_Project/examples/blink_Cube_IDE/src/: main.c
STM32_AzureRTOS_Project/examples/blink_Cube_threadx/: CMakeLists.txt
STM32_AzureRTOS_Project/examples/blink_Cube_threadx/src/: main.c  stm32g0xx_hal_msp.c  stm32g0xx_it.c
STM32_AzureRTOS_Project/examples/blink_ThreadX/: CMakeLists.txt  main.c
STM32_AzureRTOS_Project/examples/blinky/: CMakeLists.txt  blinky.c  stm32g0xx_hal_conf.h
STM32_AzureRTOS_Project/examples/clock/: CMakeLists.txt  tx_initialize_low_level.S
STM32_AzureRTOS_Project/examples/clock/inc/: RTE_Components.h  i2c-lcd.h  main.h  stm32f4xx_it.h
STM32_AzureRTOS_Project/examples/clock/src/: app_threadx.c  i2c-lcd.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32_AzureRTOS_Project/examples/hello_word_treadx/: CMakeLists.txt  tx_initialize_low_level.S
STM32_AzureRTOS_Project/examples/hello_word_treadx/inc/: stm32g0xx_hal_conf.h
STM32_AzureRTOS_Project/examples/hello_word_treadx/src/: main.c  stm32g0xx_hal_msp.c  stm32g0xx_it.c
STM32_AzureRTOS_Project/examples/multiple_tasks/: CMakeLists.txt
STM32_AzureRTOS_Project/examples/multiple_tasks/inc/: stm32g0xx_it.h
STM32_AzureRTOS_Project/examples/multiple_tasks/src/: main.c  stm32g0xx_hal_msp.c
STM32_AzureRTOS_Project/examples/potentiometer_threadx/: CMakeLists.txt
STM32_AzureRTOS_Project/examples/potentiometer_threadx/inc/: main.h  stm32g0xx_hal_conf.h
STM32_AzureRTOS_Project/examples/potentiometer_threadx/src/: main.c
STM32_AzureRTOS_Project/include/: MyGPIO.h  help_functions.h  main.h  stm32g0xx_hal_conf.h
STM32_AzureRTOS_Project/src/: MyGPIO.c  help_functions.c  main.c
STM32_AzureRTOS_Project/test/: stm32g0xx_hal.h  test_MyGPIO.c  test_main.c
